# llm_service

./: .gitignore  .gitmodules  A_ToUse.txt  README.md  Taskfile.yml  buf.gen.yaml  main.py  pyproject.toml  requirements.txt  schema.sql
app/: llm_service.py  main.py
app/graph/: builder.py  prompts.py  router.py  state.py
app/graph/nodes/: agent.py  qdrantNodes.py  triage.py
app/graph/tools/: search.py
app/grpc_services/: llm_service.py
app/middlewares/: utils.py
app/routes/: llmRouter.py
app/templates/: ask.html
app/tools/: search.py
app/utils/: conv_ctx_manager.py  file_manager.py  index.py  model_router.py  networkReq.py  networkUtils.py  saveChatHistory.py
app/utils/db/: DBRegistry.py  connectPg2.py  connectQdrant.py  pgSync.py  valkeyConnect.py
app/utils/protobufs/: llmProtobuf.py
