[project]
name = "llm-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "cohere>=5.20.0",
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-postgres>=3.0.1",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "transformers>=4.57.1",
    "typing>=3.10.0.0",
    "xgboost>=3.1.2",
]
